--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>電卓</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <style>
+        .btn-calc {
+            width: 75px;
+            height: 75px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>電卓！！！</h1>
+    <h1>電卓</h1>
+
+    <button type="button" class="btn btn-warning btn-lg btn-calc">AC</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">±</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">%</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">÷</button><br>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">7</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">8</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">9</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">×</button><br>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">4</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">5</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">6</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">ー</button><br>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">1</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">2</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">3</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">+</button><br>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">0</button>
+    <button type="button" class="btn btn-secondary btn-lg btn-calc">.</button>
+    <button type="button" class="btn btn-warning btn-lg btn-calc">C</button>
+    <button type="button" class="btn btn-danger btn-lg btn-calc">=</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
