--- a/index.html
+++ b/index.html
@@ -4,36 +4,38 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    
+    <title>電卓</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>電卓</h1>
+    <h1>電卓</h1><br>
 
-    <button type="button" class="btn btn-warning btn-lg btn-calc">AC</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">±</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">%</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">÷</button><br>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">7</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">8</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">9</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">×</button><br>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">4</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">5</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">6</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">ー</button><br>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">1</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">2</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">3</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">+</button><br>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">0</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-calc">.</button>
-    <button type="button" class="btn btn-warning btn-lg btn-calc">C</button>
-    <button type="button" class="btn btn-danger btn-lg btn-calc">=</button>
+    <div class="btn-calc">
+        <button type="button" class="btn btn-warning btn-lg">AC</button>
+        <button type="button" class="btn btn-warning btn-lg">±</button>
+        <button type="button" class="btn btn-warning btn-lg">%</button>
+        <button type="button" class="btn btn-warning btn-lg">÷</button><br>
+        <button type="button" class="btn btn-secondary btn-lg">7</button>
+        <button type="button" class="btn btn-secondary btn-lg">8</button>
+        <button type="button" class="btn btn-secondary btn-lg">9</button>
+        <button type="button" class="btn btn-warning btn-lg">×</button><br>
+        <button type="button" class="btn btn-secondary btn-lg">4</button>
+        <button type="button" class="btn btn-secondary btn-lg">5</button>
+        <button type="button" class="btn btn-secondary btn-lg">6</button>
+        <button type="button" class="btn btn-warning btn-lg">ー</button><br>
+        <button type="button" class="btn btn-secondary btn-lg">1</button>
+        <button type="button" class="btn btn-secondary btn-lg">2</button>
+        <button type="button" class="btn btn-secondary btn-lg">3</button>
+        <button type="button" class="btn btn-warning btn-lg">+</button><br>
+        <button type="button" class="btn btn-secondary btn-lg">0</button>
+        <button type="button" class="btn btn-secondary btn-lg">.</button>
+        <button type="button" class="btn btn-warning btn-lg">C</button>
+        <button type="button" class="btn btn-danger btn-lg">=</button>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
