一番上の行追加

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
-    <h1>電卓</h1><br>
+    <br><br><br><br><br>
+    <h1>電卓</h1><br><br><br>
 
     <div class="btn-calc">
+        <button id="initial" type="button" class="btn btn-light"><p id="initialnum">0</p></button><br>
         <button type="button" class="btn btn-warning btn-lg">AC</button>
         <button type="button" class="btn btn-warning btn-lg">±</button>
         <button type="button" class="btn btn-warning btn-lg">%</button>
@@ -22,7 +24,7 @@
         <button type="button" class="btn btn-secondary btn-lg">7</button>
         <button type="button" class="btn btn-secondary btn-lg">8</button>
         <button type="button" class="btn btn-secondary btn-lg">9</button>
-        <button type="button" class="btn btn-warning btn-lg">×</button><br>
+        <button type="button" class="btn btn-warning btn-lg">x</button><br>
         <button type="button" class="btn btn-secondary btn-lg">4</button>
         <button type="button" class="btn btn-secondary btn-lg">5</button>
         <button type="button" class="btn btn-secondary btn-lg">6</button>
