--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
     <br><br><br><br><br>
-    <h1>電卓</h1><br><br><br>
+    <h1 id="heading1">電卓</h1><br><br><br>
 
-    <div class="btn-calc">
-        <button id="initial" type="button" class="btn btn-light"><p id="initialnum">0</p></button><br>
+    <p id="initial">0</p>
+
+    <div id="allbtn" class="btn-calc">
         <button type="button" class="btn btn-warning btn-lg">AC</button>
         <button type="button" class="btn btn-warning btn-lg">±</button>
         <button type="button" class="btn btn-warning btn-lg">%</button>
@@ -24,7 +25,7 @@
         <button type="button" class="btn btn-secondary btn-lg">7</button>
         <button type="button" class="btn btn-secondary btn-lg">8</button>
         <button type="button" class="btn btn-secondary btn-lg">9</button>
-        <button type="button" class="btn btn-warning btn-lg">x</button><br>
+        <button type="button" class="btn btn-warning btn-lg">×</button><br>
         <button type="button" class="btn btn-secondary btn-lg">4</button>
         <button type="button" class="btn btn-secondary btn-lg">5</button>
         <button type="button" class="btn btn-secondary btn-lg">6</button>
@@ -32,11 +33,11 @@
         <button type="button" class="btn btn-secondary btn-lg">1</button>
         <button type="button" class="btn btn-secondary btn-lg">2</button>
         <button type="button" class="btn btn-secondary btn-lg">3</button>
-        <button type="button" class="btn btn-warning btn-lg">+</button><br>
+        <button type="button" class="btn btn-warning btn-lg">＋</button><br>
         <button type="button" class="btn btn-secondary btn-lg">0</button>
         <button type="button" class="btn btn-secondary btn-lg">.</button>
         <button type="button" class="btn btn-warning btn-lg">C</button>
-        <button type="button" class="btn btn-danger btn-lg">=</button>
+        <button id="equal" type="button" class="btn btn-lg">＝</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
