--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
     <br><br><br><br><br>
     <h1 id="heading1">電卓</h1><br><br><br>
 
-    <p id="initial">0</p>
+    <p id="resultnum">0</p>
 
     <div id="allbtn" class="btn-calc">
-        <button type="button" class="btn btn-warning btn-lg">AC</button>
-        <button type="button" class="btn btn-warning btn-lg">±</button>
-        <button type="button" class="btn btn-warning btn-lg">%</button>
-        <button type="button" class="btn btn-warning btn-lg">÷</button><br>
-        <button type="button" class="btn btn-secondary btn-lg">7</button>
-        <button type="button" class="btn btn-secondary btn-lg">8</button>
-        <button type="button" class="btn btn-secondary btn-lg">9</button>
-        <button type="button" class="btn btn-warning btn-lg">×</button><br>
-        <button type="button" class="btn btn-secondary btn-lg">4</button>
-        <button type="button" class="btn btn-secondary btn-lg">5</button>
-        <button type="button" class="btn btn-secondary btn-lg">6</button>
-        <button type="button" class="btn btn-warning btn-lg">ー</button><br>
-        <button type="button" class="btn btn-secondary btn-lg">1</button>
-        <button type="button" class="btn btn-secondary btn-lg">2</button>
-        <button type="button" class="btn btn-secondary btn-lg">3</button>
-        <button type="button" class="btn btn-warning btn-lg">＋</button><br>
-        <button type="button" class="btn btn-secondary btn-lg">0</button>
-        <button type="button" class="btn btn-secondary btn-lg">.</button>
-        <button type="button" class="btn btn-warning btn-lg">C</button>
+        <button id="ac" type="button" class="btn btn-warning btn-lg">AC</button>
+        <button id="plusminus" type="button" class="btn btn-warning btn-lg">±</button>
+        <button id="percent" type="button" class="btn btn-warning btn-lg">%</button>
+        <button id="divide" type="button" class="btn btn-warning btn-lg">÷</button><br>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">7</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">8</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">9</button>
+        <button id="multiply" type="button" class="btn btn-warning btn-lg">×</button><br>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">4</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">5</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">6</button>
+        <button id="subtract" type="button" class="btn btn-warning btn-lg">ー</button><br>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">1</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">2</button>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">3</button>
+        <button id="add" type="button" class="btn btn-warning btn-lg">＋</button><br>
+        <button id="num" type="button" class="btn btn-secondary btn-lg">0</button>
+        <button id="period" type="button" class="btn btn-secondary btn-lg">.</button>
+        <button id="c" type="button" class="btn btn-warning btn-lg">C</button>
         <button id="equal" type="button" class="btn btn-lg">＝</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
