--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <button id="num" type="button" class="btn btn-secondary btn-lg">4</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">5</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">6</button>
-        <button id="subtract" type="button" class="btn btn-warning btn-lg">ー</button><br>
+        <button id="minus" type="button" class="btn btn-warning btn-lg">ー</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">1</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">2</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">3</button>
-        <button id="add" type="button" class="btn btn-warning btn-lg">＋</button><br>
+        <button id="plus" type="button" class="btn btn-warning btn-lg">＋</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">0</button>
         <button id="period" type="button" class="btn btn-secondary btn-lg">.</button>
         <button id="c" type="button" class="btn btn-warning btn-lg">C</button>
