eval後、自力で完成

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         <button id="ac" type="button" class="btn btn-warning btn-lg">AC</button>
         <button id="plusminus" type="button" class="btn btn-warning btn-lg">±</button>
         <button id="percent" type="button" class="btn btn-warning btn-lg">%</button>
-        <button id="divide" type="button" class="btn btn-warning btn-lg">÷</button><br>
+        <button id="division" type="button" class="btn btn-warning btn-lg">÷</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">7</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">8</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">9</button>
-        <button id="multiply" type="button" class="btn btn-warning btn-lg">×</button><br>
+        <button id="multiplication" type="button" class="btn btn-warning btn-lg">×</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">4</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">5</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">6</button>
-        <button id="minus" type="button" class="btn btn-warning btn-lg">ー</button><br>
+        <button id="subtraction" type="button" class="btn btn-warning btn-lg">ー</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">1</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">2</button>
         <button id="num" type="button" class="btn btn-secondary btn-lg">3</button>
-        <button id="plus" type="button" class="btn btn-warning btn-lg">＋</button><br>
+        <button id="addition" type="button" class="btn btn-warning btn-lg">＋</button><br>
         <button id="num" type="button" class="btn btn-secondary btn-lg">0</button>
         <button id="period" type="button" class="btn btn-secondary btn-lg">.</button>
         <button id="c" type="button" class="btn btn-warning btn-lg">C</button>
